<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2_trimmed"
    android:fillViewport="true"
    android:padding="10dp"
    tools:context=".Register">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true">


        <TextView
            android:id="@+id/txtCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/nunito"
            android:onClick="goBack"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:cornerRadius="10sp"
            app:strokeColor="#000000"
            app:strokeWidth="3sp" />

        <TextView
            android:id="@+id/textConfirmPassword"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="420dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/confirm_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textPassword2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="315dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/prompt_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textEmailAddress"
            android:layout_width="100dp"
            android:layout_height="30sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="210dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="300dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="410dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etStudentIDReg"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="105dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/student_id"
            android:inputType="number"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textUserName3"
            android:layout_width="120dp"
            android:layout_height="30sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="115dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/student_id"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRegister4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/nunito"
        android:onClick="btnRegisterAccount"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="10sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />



</RelativeLayout>