<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2_trimmed"
    android:fillViewport="true"
    android:padding="10dp"
    tools:context=".Create_Projects">


    <androidx.cardview.widget.CardView
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true">


        <TextView
            android:id="@+id/textProjectTitleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/create_new_project_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/nunito"
            android:onClick="goHome"
            android:text="Back"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:cornerRadius="10sp"
            app:strokeColor="#000000"
            app:strokeWidth="3sp" />

        <TextView
            android:id="@+id/textProjectTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="110dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/project_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="@string/project_title"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="205dp"
            android:fontFamily="@font/nunito_bold"
            android:text="Description"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="190dp"
            android:background="@drawable/input_field"
            android:gravity="start"
            android:hint="Description"
            android:inputType="textMultiLine|text"
            android:lines="3"
            android:maxLines="10"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="380dp"
            android:background="@drawable/input_field"
            android:gravity="start"
            android:hint="First Name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="460dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_field"
            android:gravity="start"
            android:hint="Last Name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/nunito_bold"
            android:text="Year"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editYear"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="290dp"
            android:background="@drawable/input_field"
            android:ems="10"
            android:hint="Year"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="390dp"
            android:fontFamily="@font/nunito_bold"
            android:text="First Name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="470dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/nunito_bold"
            android:text="Last Name"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnProjectUpdate"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/nunito"
        android:text="@string/create_project"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:textStyle="bold"
        android:typeface="normal"
        app:cornerRadius="10sp"
        app:strokeColor="#000000"
        app:strokeWidth="3sp" />
</RelativeLayout>